# DoctrinaSDK

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  FEATURES.md  README.md
.github/workflows/: WindowsBuild.yml  WindowsOnPush.yml
DoctrinaEditor/: CMakeLists.txt
DoctrinaEditor/Source/: main.cpp  stdafx.h
DoctrinaEngine/: CMakeLists.txt  DoctrinaEngine.cpp  DoctrinaEngine.h
DoctrinaEngine/Application/Private/: deApplication.cpp
DoctrinaEngine/Application/Public/: deApplication.h
DoctrinaEngine/Core/Private/: DoctrinaEngine.cpp
DoctrinaEngine/Core/Public/: DoctrinaEngine.h  deVersion.h
DoctrinaEngine/Source/: CMakeLists.txt
DoctrinaEngine/Source/Application/Private/: deApplication.cpp
DoctrinaEngine/Source/Application/Public/: deApplication.h
DoctrinaEngine/Source/Core/Private/: deCVar.cpp
DoctrinaEngine/Source/Core/Public/: deCVar.h  deTimer.h  deVersion.h
DoctrinaEngine/Source/Map/Private/: deMapComponent.h
DoctrinaEngine/Source/Map/Private/Components/: deCameraComponent.cpp  deCameraComponent.h
DoctrinaEngine/Source/Map/Public/: deMap.h
DoctrinaEngine/Source/Math/Private/: deMathAliases.h
DoctrinaEngine/Source/Math/Public/: deMath.h
DoctrinaEngine/Source/Renderer/Private/: deRHI_D3D11.cpp  deRHI_D3D11.h  deRenderer.cpp
DoctrinaEngine/Source/Renderer/Public/: deRHI_D3D11.h  deRenderer.h
DoctrinaEngine/Source/Tools/Private/: deConsole.cpp
DoctrinaEngine/Source/Tools/Public/: deConsole.h
Editor/: CMakeLists.txt  Editor.cpp  Editor.h
Editor/Source/: Editor.cpp  Editor.h  framework.h  main.cpp  main.h  stdafx.h  targetver.h
Editor/Source/Resource/: Editor.aps  Editor.rc  resource.h
